tests/NormalTests/paczka1/small_fuzzy/64092492.err
Error in line 1: gsF S382 54,5
Error in line 3: gsF S278 47,3
Error in line 4: gsF S81 61,2
Error in line 6: gsF S278 39,1
